--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,5 @@
+/* Estilo del body */
+
 body {
   font-family: "Gerogia", sans-serif;
   background-color: #191919;
@@ -5,6 +7,8 @@ body {
   margin: 0;
   padding: 0;
 }
+
+/* Estilo del menu */
 
 .menu {
   display: flex;
@@ -23,10 +27,14 @@ body {
   background-color: #b3031f;
 }
 
+/* Estilo del main */
+
 main {
   padding: 10px;
   text-align: center;
 }
+
+/* Estilo del Carrusel */
 
 .carrousel {
   display: flex;
@@ -43,13 +51,7 @@ main {
   border: 4px solid #ff0000;
 }
 
-footer {
-  background-color: #2b2b2b;
-  color: #ccc;
-  text-align: center;
-  padding: 5px;
-  margin-top: 40px;
-}
+/* Estilo del Articulo */
 
 .articulos {
   background-image: url("imagenes/logoF1.webp");
@@ -76,4 +78,42 @@ footer {
 .articulos img {
   width: 100%;
   border-radius: 10px;
+}
+
+/* Estilo del Formulario */
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+input {
+  padding: 8px;
+  border: none;
+  border-radius: 5px;
+  width: 250px;
+}
+
+button {
+  background-color: #d90429;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #b3031f;
+}
+
+footer {
+  background-color: #2b2b2b;
+  color: #ccc;
+  text-align: center;
+  padding: 5px;
+  margin-top: 40px;
 }
